--- a/strings/command.yml
+++ b/strings/command.yml
@@ -12,7 +12,7 @@
 
 # Bot Commands
 PING_COMMAND : ["ping", "पिंग"]
-START_COMMAND : ["mstart", "स्टार्ट"]
+START_COMMAND : ["start", "स्टार्ट"]
 HELP_COMMAND : ["mhelp", "हेल्प"]
 SETTINGS_COMMAND : ["settings", "setting", "सेटिंग्स", "सेटिंग"]
 RELOAD_COMMAND : ["admincache", "reload", "व्यवस्थापक कैश", "पुनः लोड करें"]
